--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive portfolio website</title>
+        <!-- tab icon -->
+    <link rel="icon" href="img/p.ico">
     <!-- costume css link -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- High Quality web friendly icons (remote version) -->
