--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 passed IT support from google and other certificates, looking for new opportunities in IT
                 field.
             </p>
-            <a href="#" class="brn">More About</a>
+            <a href="#" class="btn">More About</a>
         </div>
     </section>
     <!-- services section -->
