--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- about section -->
     <section class="about" id="about">
         <div class="about-img" >
-            <img src="img/aboutme3.jpg" alt="">
+            <img src="img/aboutme.jpg" alt="">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
