--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <section class="contact" id="contact">
     <div class="contact-text">
         <h2>Contact <span>Me</span></h2>
-        <h4>if you need help with your projects</h4>
+        <h4>help you to build your web application</h4>
         <p>creating degital solutions for real world problems.</p>
         
         <div class="list">
