--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <!-- end section -->
 <section class="end">
     <div class="last-text">
-        <p>designed by Ouahiba Ahmid</p>
+        <p>made by Ouahiba Ahmid</p>
     </div>
     <div class="top">
         <a href="#home"><i class="bx bxs-chevron-up"></i></a>
